--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restaurant Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Header Section -->
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>Bukhara</h1>
+            </div>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Welcome to Bukhara</h2>
+            <p>Experience the best dining with us</p>
+            <a href="#menu" class="btn">Explore Menu</a>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <!-- About Section -->
+<section id="about" class="about">
+    <div class="container">
+        <h2>About Us</h2>
+        <div class="about-content">
+            <img src="aboutla.jpg" alt="About Us Image style="height:300px;width:300px; class="about-image">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat.</p>
+        </div>
+    </div>
+</section>
+
+
+    <!-- Menu Section -->
+    <section id="menu" class="menu">
+        <div class="container">
+            <h2>Our Menu</h2>
+            <div class="menu-items">
+                <div class="menu-item">
+                    <h3>Pizza</h3>
+                    
+                    <p>Delicious wood-fired pizza with fresh ingredients.</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Pasta</h3>
+                    <p>Authentic Momo with a variety of sauces.</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Burgers</h3>
+                    <p>Juicy burgers with all the fixings.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h2>Gallery</h2>
+            <div class="gallery-grid">
+                <img src="Pizzap.jpg" alt="Gallery Image 1" style="height:300px;width:300px;"/>
+                <img src="Momo.jpg" alt="Gallery Image 2" style="height:300px;width:300px;"/>
+                <img src="Burger.jpg" alt="Gallery Image 3" style="height:300px;width:300px;"/>
+                <img src="Chowmein.jpg" alt="Gallery Image 4" style="height:300px;width:300px;"/>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>123 Restaurant St, Food City</p>
+            <p>Email: contact@restaurantbhukhara.com</p>
+            <p>Phone: (123) 456-7890</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Bhukhara. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
